[workspace]
members = [
    "anvil-api",
    "asset-intents",
    "cardano-assets",
    "cnft-tools",
    "discord-client",
    "http-client",
    "pinata",
    "test-utils",
    "tx-insights",
    "wasm-safe-serde",
    "worker-stack",
    "worker-utils",
    "asset-rarity",
    "indexers/*",
    "ui/scss-macros",
    "ui/ui-core",
    "ui/ui-flow",
    "ui/ui-flow-protocol",
    "ui/ui-loader",
    "ui/ui-loader-macros",
    "ui/ui-toast",
    "ui/ui-components",
    "ui/wallet-core",
    "ui/wallet-pallas",
    "ui/wallet-leptos",
    "ui/_storybook",
    "ui/workers/flow-demo",
    "ui/workers/flow-demo/frontend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/defrag-au/shared-crates"
authors = ["Damon Oehlman <damon@defrag.au>"]

[workspace.dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
tower-http = { version = "0.6" }
gloo-net = "0.6.0"
indexmap = { version = "2.0", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.12.12", default-features = false }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.134" }
serde_with = { version = "3.12.0" }
tokio = { version = "1.43.0", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
utoipa = { version = "5" }

# worker and wasm-bindgen associated resources
# Note: These are now managed through the worker_stack facade crate
# with pinned versions to ensure ecosystem compatibility
worker_stack = { path = "worker-stack" }

# UI workspace dependencies (from shared-ui)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "Node",
    "NodeList",
    "Text",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Storage",
    "console",
    "DomTokenList",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "FocusEvent",
    "KeyboardEvent",
] }
thiserror = "1"
futures = "0.3"
futures-signals = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
maud = "0.26"
rmp-serde = "1.3"
serde-wasm-bindgen = "0.6"
serde_repr = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", features = ["small_rng", "std"] }

# Internal path deps usable as workspace deps
asset-intents = { path = "asset-intents" }
cardano-assets = { path = "cardano-assets" }
worker_utils = { path = "worker-utils" }
asset-rarity = { path = "asset-rarity" }
