[workspace]
members = [
    "address-registry",
    "anvil-api",
    "asset-intents",
    "cardano-tx",
    "cardano-assets",
    "cnft-tools",
    "discord-client",
    "http-client",
    "openai-client",
    "pinata",
    "test-utils",
    "tx-insights",
    "wasm-safe-serde",
    "worker-stack",
    "worker-utils",
    "asset-rarity",
    "indexers/*",
    "ui/scss-macros",
    "ui/ui-core",
    "ui/ui-flow",
    "ui/ui-flow-protocol",
    "ui/ui-loader",
    "ui/ui-loader-macros",
    "ui/ui-toast",
    "ui/ui-components",
    "ui/wallet-core",
    "ui/wallet-pallas",
    "ui/wallet-leptos",
    "ui/canvas-bridge",
    "ui/egui-widgets",
    "ui/_storybook",
    "ui/_storybook-egui",
    "ui/workers/flow-demo",
    "ui/workers/flow-demo/frontend",
    "procedural/*",
    "ai-media-gen",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/defrag-au/shared-crates"
authors = ["Damon Oehlman <damon@defrag.au>"]

[workspace.dependencies]
async-stream = "0.3.6"
futures-core = "0.3.31"
futures-util = "0.3.31"
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
tower-http = { version = "0.6" }
gloo-net = "0.6.0"
indexmap = { version = "2.0", features = ["serde"] }
phf = { version = "0.11", features = ["macros"] }
reqwest = { version = "0.12.12", default-features = false }
serde = { version = "1.0.217" }
serde_json = { version = "1.0.134" }
serde_with = { version = "3.12.0" }
tokio = { version = "1.43.0", default-features = false }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3" }
utoipa = { version = "5" }

# worker and wasm-bindgen associated resources
# Note: These are now managed through the worker_stack facade crate
# with pinned versions to ensure ecosystem compatibility
worker_stack = { path = "worker-stack" }

# UI workspace dependencies (from shared-ui)
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlImageElement",
    "Node",
    "NodeList",
    "Text",
    "ShadowRoot",
    "ShadowRootInit",
    "ShadowRootMode",
    "CustomElementRegistry",
    "Event",
    "EventTarget",
    "MouseEvent",
    "InputEvent",
    "HtmlInputElement",
    "Storage",
    "console",
    "DomTokenList",
    "CssStyleDeclaration",
    "CustomEvent",
    "CustomEventInit",
    "FocusEvent",
    "KeyboardEvent",
] }
# Cardano primitives
pallas-addresses = "1.0.0-alpha.3"
pallas-codec = "1.0.0-alpha.3"
pallas-crypto = "1.0.0-alpha.3"
pallas-primitives = "1.0.0-alpha.3"
pallas-txbuilder = "1.0.0-alpha.3"

thiserror = "1"
futures = "0.3"
futures-signals = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
maud = "0.26"
rmp-serde = "1.3"
serde-wasm-bindgen = "0.6"
serde_repr = "0.1"
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = { version = "0.9", features = ["small_rng", "std"] }
log = "0.4"

# egui stack
egui = "0.33"
egui_inbox = "0.10"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "glow"] }
egui_extras = { version = "0.33", features = ["image", "http"] }
image = { version = "0.25", default-features = false }

# Internal path deps usable as workspace deps
address-registry = { path = "address-registry" }
asset-intents = { path = "asset-intents" }
cardano-assets = { path = "cardano-assets" }
cardano-tx = { path = "cardano-tx" }
worker_utils = { path = "worker-utils" }
asset-rarity = { path = "asset-rarity" }
egui-widgets = { path = "ui/egui-widgets" }
wallet-core = { path = "ui/wallet-core" }
wallet-pallas = { path = "ui/wallet-pallas" }
