[package]
name = "ai-media-gen"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "x.ai image generation client using http-client for platform-agnostic HTTP"

[dependencies]
http-client = { path = "../http-client" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = "2.0"
