[package]
name = "anvil-api"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Client library for Anvil API"

[dependencies]
cardano-assets = { path = "../cardano-assets" }
http-client = { path = "../http-client" }
wasm_safe_serde = { path = "../wasm-safe-serde" }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1.3"
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
test_utils = { path = "../test-utils" }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
tracing-subscriber = { workspace = true, features = ["fmt"] }
