[package]
name = "assets"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Asset metadata handling and trait processing"

[dependencies]
cnft_tools = { path = "../cnft-tools" }
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_plain = "1.0.2"
worker = { workspace = true }

[dev-dependencies]
test_utils = { path = "../test-utils" }