[package]
name = "cardano-assets"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Cardano asset metadata handling and trait processing"

[dependencies]
cnft_tools = { path = "../cnft-tools" }
hex = "0.4"
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_plain = "1.0.2"
worker_stack = { workspace = true }
utoipa = { workspace = true, optional = true }
# UTxORPC support (optional)
utxorpc-spec = { version = "0.17", optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
utxorpc = ["dep:utxorpc-spec", "dep:tracing"]
openapi = ["dep:utoipa"]

[dev-dependencies]
test_utils = { path = "../test-utils" }
pallas-utxorpc = "1.0.0-alpha.3"
