[package]
name = "cardano-assets"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Cardano asset metadata handling and trait processing"

[dependencies]
bech32 = { version = "0.11", optional = true }
blake2 = { version = "0.10", optional = true }
cnft_tools = { path = "../cnft-tools" }
hex = "0.4"
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_plain = "1.0.2"
utoipa = { workspace = true, optional = true }
# UTxORPC support (optional)
utxorpc-spec = { version = "0.17", optional = true }
tracing = { workspace = true, optional = true }

[features]
default = []
cip14 = ["dep:bech32", "dep:blake2"]
utxorpc = ["dep:utxorpc-spec", "dep:tracing"]
openapi = ["dep:utoipa"]

[dev-dependencies]
test_utils = { path = "../test-utils" }
pallas-utxorpc = "1.0.0-alpha.3"
