[package]
name = "cardano-assets"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "Cardano asset metadata handling and trait processing"

[dependencies]
bech32 = { version = "0.11", optional = true }
blake2 = { version = "0.10", optional = true }
cnft_tools = { path = "../cnft-tools", optional = true }
hex = "0.4"
indexmap = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_plain = "1.0.2"
utoipa = { workspace = true, optional = true }
# UTxORPC support (optional). Pulls from workspace pin so the
# whole pipeline upgrades in lockstep with `pallas-utxorpc`.
utxorpc-spec = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
# CIP-68 datum (Plutus data) CBOR decoding — optional, behind `cip68`.
pallas-codec = { workspace = true, optional = true }
pallas-primitives = { workspace = true, optional = true }

[features]
default = []
cip14 = ["dep:bech32", "dep:blake2"]
cip68 = ["dep:pallas-codec", "dep:pallas-primitives"]
# CIP-25 mint-tx metadata (label 721) decode — same pallas deps as cip68.
cip25 = ["dep:pallas-codec", "dep:pallas-primitives"]
# Generic UTxO tag datum (namespace + version + app-defined u32 role bitflags)
# encode/decode — a reusable inline-datum facility; same pallas deps as cip68.
tag-datum = ["dep:pallas-codec", "dep:pallas-primitives"]
utxorpc = ["dep:utxorpc-spec", "dep:tracing"]
openapi = ["dep:utoipa"]
cnft_tools = ["dep:cnft_tools"]

[dev-dependencies]
test_utils = { path = "../test-utils" }
pallas-utxorpc = { workspace = true }
