[package]
name = "cnft_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39" }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
worker = { workspace = true }
test_utils = { path = "../test-utils" }
