[package]
name = "cnft_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39" }
reqwest = { workspace = true, default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
worker = { workspace = true, optional = true }
tracing = { workspace = true }

[features]
default = []
worker = ["dep:worker"]

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
test_utils = { path = "../test-utils" }
worker_utils = { path = "../worker-utils" }
