[package]
name = "discord-client"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"

# Native dependencies (for augminted-bots)
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
    "multipart",
], optional = true }

# WASM dependencies (for cnft.dev-workers)
gloo-net = { workspace = true, features = ["json"], optional = true }
worker_stack = { workspace = true, optional = true }

# Twilight types and builders (WASM-safe)
twilight-model = { version = "0.16", default-features = false }
twilight-util = { version = "0.16", default-features = false, features = [
    "builder",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
dotenv = "0.15"
wasm-bindgen-test = "0.3"
tracing-subscriber = { workspace = true }

[features]
default = ["native"]
native = ["reqwest"]
wasm = ["gloo-net", "worker_stack"]

[[example]]
name = "native_example"
path = "examples/native_example.rs"
required-features = ["native"]
