[package]
name = "fal-client"
version.workspace = true
authors.workspace = true
edition = "2021"
description = "fal.ai image generation/editing client (Qwen inpaint, Flux Fill) using http-client for platform-agnostic HTTP"

[dependencies]
http-client = { path = "../http-client" }
serde = { workspace = true, features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
