[package]
name = "utxo-optimizer"
version.workspace = true
edition.workspace = true

[dependencies]
cardano-assets = { workspace = true }
good_lp = { version = "1.15", default-features = false, features = ["microlp"] }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
hex = "0.4"
