[package]
name = "worker_utils"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[features]
default = ["console_error_panic_hook"]
console_error_panic_hook = ["dep:console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
js-sys = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { workspace = true }
wasm-bindgen-macro = { workspace = true }
wasm-bindgen-futures = { workspace = true }
worker = { workspace = true, features = ["queue"] }
tracing = { workspace = true }
tracing-web = "0.1"
tracing-subscriber = { version = "0.3", features = ['time', 'json'] }
time = { version = "0.3", features = ['wasm-bindgen'] }

[dev-dependencies]
tracing-subscriber = "0.3"
serde_json = { workspace = true }
test_utils = { path = "../test-utils" }
