[package]
name = "worker_utils"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

[features]
default = ["console_error_panic_hook", "simple-logging"]
console_error_panic_hook = ["dep:console_error_panic_hook"]
full-logging = ["tracing-subscriber", "tracing-web", "time"]
simple-logging = []
axum = ["dep:axum", "dep:tower-http", "dep:futures-channel", "dep:serde_json"]

[dependencies]
cfg-if = "1.0.0"
console_error_panic_hook = { version = "0.1.1", optional = true }
serde = { workspace = true }
worker_stack = { workspace = true }
tracing = { workspace = true }
tracing-web = { version = "0.1", optional = true }
tracing-subscriber = { workspace = true, features = ['time', 'json'], optional = true }
time = { version = "0.3", features = ['wasm-bindgen'], optional = true }
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["cors"] }
futures-channel = { version = "0.3.31", optional = true }
serde_json = { workspace = true, optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
serde_json = { workspace = true }
test_utils = { path = "../test-utils" }
