[package]
name = "datum-parsing"
version = "0.1.0"
edition = "2021"
description = "Lightweight WASM-compatible Cardano datum parsing using TOML schemas"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
thiserror = "1.0"
tracing = { workspace = true }
pallas-codec = { workspace = true }
pallas-primitives = { workspace = true }
pipeline-types = { workspace = true }
address-registry = { workspace = true }
toml = "0.8"
once_cell = "1.19"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test_utils = { workspace = true }
