[package]
name = "oura-decoder"
version = "0.1.0"
edition = "2021"
description = "UTxORPC CBOR decoding utilities for Oura block data using Pallas"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
thiserror = "1.0"
base64 = "0.22"
blake2 = "0.10"
bytes = "1.0"
pallas-addresses = { workspace = true }
pallas-codec = { workspace = true }
pallas-primitives = { workspace = true }
pallas-traverse = { workspace = true }
pallas-crypto = { workspace = true }
pallas-utxorpc = { workspace = true }
utxorpc-spec = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test_utils = { workspace = true }
