[package]
name = "transactions"
version = "0.1.0"
edition = "2021"
description = "Core transaction data structures for Cardano pipeline processing"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true }
pallas-codec = { workspace = true }
pallas-primitives = { workspace = true }
wasm_safe_serde = { workspace = true }
pipeline-types = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
test_utils = { workspace = true }
