[package]
name = "tx-classifier"
version = "0.1.0"
edition = "2021"
description = "Cardano transaction classification — DEX swaps, marketplace sales, listings, offers, mints"

[dependencies]
# Core classification deps (always available)
transactions = { workspace = true }
address-registry = { workspace = true }
datum-parsing = { workspace = true }
pipeline-types = { workspace = true }
cardano-assets = { workspace = true }
tx_insights = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }
pallas-addresses = { workspace = true }
pallas-codec = { workspace = true }
pallas-crypto = { workspace = true }
pallas-primitives = { workspace = true }
phf = { workspace = true, features = ["macros"] }
thiserror = "1.0"
once_cell = "1.19"
sha2 = "0.10"
base64 = "0.22"

# Worker-specific deps (for CF Workers indexer layer)
maestro = { workspace = true, features = ["transactions"], optional = true }
worker = { version = "=0.7.4", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test_utils = { workspace = true }

[features]
default = []
# Enable CF Workers indexer layer (Maestro, worker::Env, IndexerPool, TxClassifier)
indexers = ["dep:maestro", "dep:worker"]
